# docxtor

./: .env.example  .env.test  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 117517c56144_create_rest_of_tables.py  202824120e18_enable_cascade_deletion_for_docs_.py  20e7dcdd781d_allow_repeated_doc_titles.py  3726880782c3_enable_pgvector.py
src/: app.py
src/chats/: models.py  repository.py  router.py  schemas.py  service.py
src/database/: engine.py
src/docs/: models.py  repository.py  service.py
src/health/: router.py  schemas.py
src/settings/: settings.py
src/shared/: dependencies.py  logging_config.py  models.py  repository.py  router.py
src/users/: exceptions.py  models.py  repository.py  router.py  schemas.py  security.py  service.py  tokens.py
tests/: conftest.py  factories.py  test_health.py  test_placeholder.py
tests/fixtures/: docx-file.docx  odt-file.odt  paul_graham_essay.txt  text-file-with-commas.txt  text-file.txt
tests/integration/: conftest.py  test_auth.py  test_chats.py
tests/unit/: test_doc_service.py  test_user_service.py
