[project]
name = "docxtor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pgvector>=0.4.2",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "pypandoc-binary>=1.17",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "bpython>=0.26",
    "factory-boy>=3.3.3",
    "faker>=40.23.0",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning:slowapi"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 65

[tool.ruff]
line-length = 88
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402"]
